--- a/index.html
+++ b/index.html
@@ -5,104 +5,145 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ayman Tibi</title>
 <style>
-    body {
-        font-family: Georgia, serif;
-        max-width: 750px;
-        margin: 40px auto;
-        padding: 0 15px;
-        color: #333;
-        background: #fff;
-        line-height: 1.6;
-    }
-    img {
-        display: block;
-        max-width: 180px;
-        border-radius: 6px;
-        margin: 0 auto 20px auto;
-    }
-    .name-container {
-        text-align: center;
-    }
-    .name-container h1 {
-        font-size: 2rem;
-        margin: 0;
-        display: inline-block;
-    }
-    .name-container span {
-        display: inline-block;
-        margin-left: 8px;
-        font-size: 1.8rem;
-        font-weight: normal;
-    }
-    @media (max-width: 600px) {
-        .name-container h1, .name-container span {
-            display: block;
-            margin: 0;
-        }
-    }
-    h3 {
-        text-align: center;
-        font-weight: normal;
-        color: #555;
-        margin-top: 8px;
-        font-size: 1.1rem;
-    }
-    h2 {
-        margin-top: 35px;
-        font-size: 1.4em;
-        color: #2c3e50;
-    }
-    p {
-        font-size: 1.05em;
-    }
-    a {
-        color: #0044cc;
-        text-decoration: none;
-    }
-    a:hover {
-        text-decoration: underline;
-    }
-    ul {
-        padding-left: 18px;
-    }
-    li {
-        margin-bottom: 15px;
-    }
-    footer {
-        text-align: center;
-        font-size: 0.9em;
-        color: #777;
-        margin-top: 40px;
-    }
+  body {
+    font-family: "Georgia", "Times New Roman", serif;
+    max-width: 760px;
+    margin: 50px auto;
+    padding: 0 20px;
+    color: #2f2f2f;
+    background: #fafafa;
+    line-height: 1.7;
+  }
+
+  img {
+    display: block;
+    max-width: 160px;
+    border-radius: 50%;
+    margin: 0 auto 20px;
+    border: 2px solid #e1e1e1;
+  }
+
+  .name-container {
+    text-align: center;
+    margin-bottom: 10px;
+  }
+
+  .name-container h1 {
+    font-size: 2.1rem;
+    margin: 0;
+    color: #1a1a1a;
+  }
+
+  .name-container span {
+    display: block;
+    font-size: 1.3rem;
+    color: #555;
+    margin-top: 4px;
+  }
+
+  h3 {
+    text-align: center;
+    font-weight: normal;
+    color: #555;
+    margin: 10px 0 25px;
+    font-size: 1.05rem;
+  }
+
+  p, li {
+    font-size: 1.05rem;
+  }
+
+  h2 {
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 4px;
+    color: #2c3e50;
+    margin-top: 40px;
+    font-size: 1.3rem;
+  }
+
+  a {
+    color: #0044cc;
+    text-decoration: none;
+  }
+  a:hover {
+    text-decoration: underline;
+  }
+
+  ul {
+    list-style-type: disc;
+    padding-left: 20px;
+    margin-top: 10px;
+  }
+
+  li {
+    margin-bottom: 14px;
+  }
+
+  details summary {
+    cursor: pointer;
+    color: #0044cc;
+    font-size: 0.95rem;
+    margin-top: 5px;
+  }
+
+  details p {
+    margin-top: 8px;
+    font-size: 0.95rem;
+    line-height: 1.5;
+    color: #444;
+  }
+
+  .center-links {
+    text-align: center;
+    margin: 20px 0;
+    font-size: 1.05rem;
+  }
+
+  .center-links a {
+    margin: 0 6px;
+  }
+
+  footer {
+    text-align: center;
+    font-size: 0.85rem;
+    color: #777;
+    margin-top: 45px;
+    border-top: 1px solid #e0e0e0;
+    padding-top: 12px;
+  }
 </style>
 </head>
 <body>
 
-<img src="Ayman2.jpeg" alt="Profile Photo">
+<img src="Ayman2.jpeg" alt="Ayman Tibi">
 
 <div class="name-container">
-    <h1>Ayman Tibi</h1><span>| أيمن الطّيبي</span>
+  <h1>Ayman Tibi</h1>
+  <span>أيمن الطّيبي</span>
 </div>
-<h3>PhD Student in Economics | University of Mannheim</h3>
 
-<p style="text-align:center;">
-Email: <a href="mailto:atibi@mail.uni-mannheim.de">atibi@mail.uni-mannheim.de</a> |
-<a href="https://x.com/TibiAyman" target="_blank">X (Twitter)</a>
+<h3>PhD Student in Economics · University of Mannheim</h3>
+
+<div class="center-links">
+  Email: <a href="mailto:atibi@mail.uni-mannheim.de">atibi@mail.uni-mannheim.de</a> ·
+  <a href="https://x.com/TibiAyman" target="_blank">X (Twitter)</a>
+</div>
+
+<p>
+  Welcome! I am a PhD student in Economics at the University of Mannheim. My research interests lie in development economics, public economics, trade, and political economy.
 </p>
-
-<p>Welcome! I am a PhD student in Economics at the University of Mannheim. My research interests are in development economics, public economics, trade, and political economy.</p>
 
 <h2><a href="CV___Ayman_Tibi (6).pdf" target="_blank">Curriculum Vitae</a></h2>
 
 <h2>Work in Progress</h2>
 <ul>
   <li>
-    <strong>When Trade Policy is Place Based: The Economic Effects of QIZs in the Middle East</strong>
+    <strong>When Trade Policy is Place-Based: The Economic Effects of QIZs in the Middle East</strong>
     <span style="color:#888; font-size:0.9em;">(Draft coming soon)</span>
-    <details style="margin-top:6px;">
-      <summary style="cursor:pointer; color:#0066cc; font-size:0.95em; margin-top:5px;">Read Abstract</summary>
-      <p style="margin-top:8px; font-size:0.95em; line-height:1.5;">
-  This paper studies the economic effects of geographically targeted trade policies through the case of the Qualifying Industrial Zone (QIZ) agreements in Egypt and Jordan...
+    <details>
+      <summary>Read Abstract</summary>
+      <p>
+        This paper studies the economic effects of geographically targeted trade policies through the case of the Qualifying Industrial Zone (QIZ) agreements in Egypt and Jordan...
       </p>
     </details>
   </li>
@@ -115,13 +156,13 @@ Email: <a href="mailto:atibi@mail.uni-mannheim.de">atibi@mail.uni-mannheim.de</a
 
 <h2>News and Upcoming Talks</h2>
 <ul>
-    <li>Presented Paper on QIZs in the YSI Workshop on Structural Change, Inequality, and Growth in Maastricht, Netherlands (June 2025)</li>
-    <li>Presented Paper on QIZs in the "Third BCFM PhD Conference" in Frankfurt, Germany (June 2025)</li>
-    <li>Participated in the 23rd Summer School in International and Development Economics in Tuscany, Italy (Sept 2024)</li>
+  <li>Presented <em>“When Trade Policy is Place-Based”</em> at the YSI Workshop on Structural Change, Inequality, and Growth — Maastricht, Netherlands (June 2025)</li>
+  <li>Presented at the “Third BCFM PhD Conference” — Frankfurt, Germany (June 2025)</li>
+  <li>Participated in the 23rd Summer School in International and Development Economics — Tuscany, Italy (Sept 2024)</li>
 </ul>
 
 <footer>
-    &copy; 2025 Ayman Tibi
+  © 2025 Ayman Tibi
 </footer>
 
 </body>
