--- a/index.html
+++ b/index.html
@@ -138,8 +138,7 @@
     <h3>PhD Student in Economics · University of Mannheim</h3>
 
     <p class="links">
-      Email: <a href="mailto:atibi@mail.uni-mannheim.de">atibi@mail.uni-mannheim.de</a> · 
-      <a href="https://x.com/TibiAyman" target="_blank">X (Twitter)</a>
+      Email: <a href="mailto:atibi@mail.uni-mannheim.de">atibi(at)mail.uni-mannheim.de</a> · 
     </p>
 
     <p>
