--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
 
 <h2>News and Upcoming Talks</h2>
 <ul>
+    <li>Presented at the FHM+ workshop in development economics at the University of Stuttgart (October 2025)</li>
   <li>Presented <em>“When Trade Policy is Place-Based”</em> at the YSI Workshop on Structural Change, Inequality, and Growth — Maastricht, Netherlands (June 2025)</li>
   <li>Presented at the “Third BCFM PhD Conference” — Frankfurt, Germany (June 2025)</li>
   <li>Participated in the 23rd Summer School in International and Development Economics — Tuscany, Italy (Sept 2024)</li>
